--- a/STPMP/app/src/main/res/values/strings.xml
+++ b/STPMP/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="_btnLaba2">Лаба 2</string>
     <string name="_btnLaba3">Лаба 3</string>
     <string name="_btnKR">Контрольная</string>
+    <string name="_lab1TextViewText">Семенов Илья Юрьевич\n 6М2312</string>
 </resources>
