Finished second lab.

--- a/STPMP/app/src/main/res/values/strings.xml
+++ b/STPMP/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="_btnLaba3">Лаба 3</string>
     <string name="_btnKR">Контрольная</string>
     <string name="_lab1TextViewText">Семенов Илья Юрьевич\n 6М2312</string>
+    <string name="_labTwoButtonFirst">Отправить текст на второй экран</string>
+    <string name="_labTwoButtonFirstEditTextHint">Введите текст</string>
+    <string name="_labTwoButtonSecondEditTextHint">Введите текст</string>
+    <string name="_labTwoSecondButtonText">Отправить текст на первый экран</string>
 </resources>
