--- a/STPMP/app/src/main/res/values/strings.xml
+++ b/STPMP/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="_labTwoButtonFirstEditTextHint">Введите текст</string>
     <string name="_labTwoButtonSecondEditTextHint">Введите текст</string>
     <string name="_labTwoSecondButtonText">Отправить текст на первый экран</string>
+    <string name="_btnLabaThreeStartBackgroundTask">Запустить отсчёт времени</string>
 </resources>
