Added KP data. Layouts, and load data from JSON file.

--- a/STPMP/app/src/main/res/values/strings.xml
+++ b/STPMP/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="_labTwoButtonSecondEditTextHint">Введите текст</string>
     <string name="_labTwoSecondButtonText">Отправить текст на первый экран</string>
     <string name="_btnLabaThreeStartBackgroundTask">Запустить отсчёт времени</string>
+    <string name="title_activity_lab_kp">LabKPActivity</string>
 </resources>
